# rasa-chat

./: .gitignore  CLAUDE.md  pyproject.toml
Customer_Service_Assistant/: main.py
Customer_Service_Assistant/api/: dependencies.py  router.py  schemas.py
Customer_Service_Assistant/config/: settings.py
Customer_Service_Assistant/infrastructure/: __init__.py  api.py  db.py  llm.py
Customer_Service_Assistant/service/: chitchat_handler.py  dialogue_service.py  engine.py  schemas.py  validator.py
Customer_Service_Assistant/service/task/: __init__.py  action_runner.py  command_parser.py  command_processor.py  commands.py  flow_executor.py  links.py  loader.py  models.py  steps.py  task_handler.py
docker/: docker-compose.yml
docker/mysql/: 001_init_customer_service.sql  002_init_commerce.sql
flow_config/: user_flows.yml
tests/: conftest.py  test_action_runner.py  test_api.py  test_chitchat_handler.py  test_command_parser.py  test_command_processor.py  test_dialogue_service.py  test_dialogue_service_integration.py  test_flow_executor.py  test_flow_loader.py  test_schemas.py  test_task_handler.py  test_validator.py
