[tool.setuptools.packages.find]
include = ["Customer_Service_Assistant*"]  # 或者是你真正存放 Python 代码的包名
exclude = ["docker*", "mysql*"]
[project]
name = "rasa-chat"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "aiosqlite>=0.22.1",
    "cryptography>=46.0.7",
    "fastapi>=0.116.1",
    "greenlet>=3.4.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.3",
    "uvicorn>=0.35.0",
    "httpx>=0.28.1",
    "langchain-openai>=1.1.14",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
]
